* [bug 936] Fixed duplicate entries in search hubs
* Fixed some hub title display issues
* Some spring cleanup
* [bug 970] Unix file permissions correctly set (thanks steven sheehy)
* [ADC] Allowed $ and | in nick/description
* Fixed targetdrive bug for temp target location
* Fixed a crash bug when hash data cannot be saved
* Possibly fixed issues with queue items not being updated

-- 0.691 2006-06-03 -- 
* Links to bugzilla in html changelog
* [bug 122] Added userlist filter (thanks trem)
* [bug 578] Added search for alternates to transfers menu (thanks trem)
* [bug 861] Fixed auto-prio not being set correctly (thanks trem)
* [bug 878] Added close all ... to window menu (thanks trem)
* [bug 903] Holding shift while minimizing will use opposite tray setting (thanks joakim tosteberg)
* [bug 923] PM history always read (thanks trem)
* [bug 927] Fixed OP detection bug (thanks pothead)
* [bug 929] Fixed list view flicker issues (thanks trem)
* [bug 931] Improved keyboard navigation (thanks trem)
* Added "all" to hub list field search (thanks trem)
* Fixed bug when sending active ADC search results
* Updated to ADC 0.11
* Passive users now also get ADC search results
* Changed nmdc bot-detection to what it was before, should fix pm-to-bot bug

-- 0.69 2006-05-21 --
* Small linux / old gcc fixes (thanks jens oknelid)
* Fixed an issue where client could be crashed from remote
* Fixed an issue bad nicks could cause directories to be created in log / file list download folder
* Changed autodrop default to 2 for fewer unexpected autodrops (thanks paka)
* Saved users file more often to have fewer missing nicks around
* CID of user shown if nick is missing (in queue for example)
* Added display of CID in a few places
* Updated yaSSL to 1.2.2
* Fixed ADC hubname display (thanks ullner)
* Advanced TTH rollback no longer performed if tree is invalid (thanks garg)
* Option not to auto-disconnect favorite users (thanks ullner)
* Fixed auto-disconnect delay (thanks ullner)