@@ -933,8 +933,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,6,9,1
- PRODUCTVERSION 0,6,9,1
+ FILEVERSION 0,6,9,2
+ PRODUCTVERSION 0,6,9,2
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -951,12 +951,12 @@ BEGIN
         BEGIN
             VALUE "Comments", "http://dcplusplus.sourceforge.net"
             VALUE "FileDescription", "DC++"
-            VALUE "FileVersion", "0, 6, 9, 1"
+            VALUE "FileVersion", "0, 6, 9, 2"
             VALUE "InternalName", "DC++"
             VALUE "LegalCopyright", "Copyright 2001-2006 Jacek Sieka"
             VALUE "OriginalFilename", "DCPlusPlus.exe"
             VALUE "ProductName", "DC++"
-            VALUE "ProductVersion", "0, 6, 9, 1"
+            VALUE "ProductVersion", "0, 6, 9, 2"
         END
     END
     BLOCK "VarFileInfo"
