@@ -29,6 +29,7 @@
 #include "SimpleXML.h"
 #include "UserCommand.h"
 #include "ResourceManager.h"
+#include "LogManager.h"
 
 #include "AdcHub.h"
 #include "NmdcHub.h"
@@ -364,7 +365,15 @@ void ClientManager::on(NmdcSearch, Client* aClient, const string& aSeeker, int a
 				u_int16_t port = 0;
 				Util::decodeUrl(aSeeker, ip, port, file);
 				ip = Socket::resolve(ip);
-				if(port == 0) port = 412;
+				
+				// Temporary fix to avoid spamming hublist.org and dcpp.net
+				if(ip == "70.85.55.252" || ip == "207.44.220.108") {
+					LogManager::getInstance()->message("Someone is trying to use your client to spam " + ip + ", please urge hub owner to fix this");
+					return;
+				}
+				
+				if(port == 0) 
+					port = 412;
 				for(SearchResult::Iter i = l.begin(); i != l.end(); ++i) {
 					SearchResult* sr = *i;
 					s.writeTo(ip, port, sr->toSR(*aClient));
