@@ -1113,6 +1113,24 @@ int WinUtil::getIconIndex(const tstring& aFileName) {
 	}
 }
 
+double WinUtil::toBytes(TCHAR* aSize) {
+	double bytes = _tstof(aSize);
+
+	if (_tcsstr(aSize, CTSTRING(PIB))) {
+		return bytes * 1024.0 * 1024.0 * 1024.0 * 1024.0 * 1024.0;
+	} else if (_tcsstr(aSize, CTSTRING(TiB))) {
+		return bytes * 1024.0 * 1024.0 * 1024.0 * 1024.0;
+	} else if (_tcsstr(aSize, CTSTRING(GiB))) {
+		return bytes * 1024.0 * 1024.0 * 1024.0;
+	} else if (_tcsstr(aSize, CTSTRING(MiB))) {
+		return bytes * 1024.0 * 1024.0;
+	} else if (_tcsstr(aSize, CTSTRING(KiB))) {
+		return bytes * 1024.0;
+	} else {
+		return bytes;
+	}
+}
+
 int WinUtil::getOsMajor() {
 	OSVERSIONINFOEX ver;
 	memset(&ver, 0, sizeof(OSVERSIONINFOEX));
